@@ -127,7 +127,7 @@ C
 4500	IF(PRSA.NE.WALKIW) RETURN
 C						!WALKIN?
 	IF(IAND(OFLAG2(DOOR),(OPENBT+TCHBT)).NE.OPENBT) RETURN
-	OFLAG2(DOOR)=IAND(IAND(OFLAG2(DOOR),CHBT), not(OPENBT))
+	OFLAG2(DOOR)=IAND(IAND(OFLAG2(DOOR),TCHBT), not(OPENBT))
 	CALL RSPEAK(22)
 C						!SLAM AND BOLT DOOR.
 	RETURN
